apps/base/paperless/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: apps
  labels:
    app: paperless
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:2.20.15
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: paperless-data
              mountPath: /usr/src/paperless/data
              subPath: data
            - name: paperless-data
              mountPath: /usr/src/paperless/media
              subPath: media
            - name: paperless-data
              mountPath: /usr/src/paperless/export
              subPath: export
            - name: paperless-data
              mountPath: /usr/src/paperless/consume
              subPath: consume
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1500m
              memory: 2Gi
      volumes:
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-data-pvc-longhorn
