apps/base/paperless/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-postgres-service
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: paperless-postgres
  ports:
    - port: 5432
      targetPort: 5432
