apps/base/paperless/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-redis-service
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: paperless-redis
  ports:
    - port: 6379
      targetPort: 6379
