apps/base/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-service
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: paperless
  ports:
    - port: 8000
      targetPort: 8000
